Add the features section

--- a/index.html
+++ b/index.html
@@ -19,15 +19,28 @@
         </nav>
     </header>
     <form id="form">
-        <h2>Handcrafted, home-made masterpieces</h2>
+        <p>Handcrafted, home-made masterpieces</p>
         <input type="text" placeholder="Enter Your Address">
-        <button>Get Started</button>
+        <input type="submit" id="submit" value="GET STARTED">
     </form>
     <section id="features">
-        <div id="video">
-
+        <div id="description">
+            <div class="feature">
+             <i class="fa-solid fa-recycle"></i> 
+             <h2>Premium Materials</h2>
+             <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+            
+            <i class="fa-solid fa-truck"></i>
+            <h2>Fast Shipping</h2>
+            <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+    
+            <i class="fa-sharp fa-solid fa-battery-full"></i>
+            </i><h2>Quality Assurance</h2>
+            <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+            </div>
+        </div>
         </div>
     </section>
+    <script src="https://kit.fontawesome.com/ca6fc0d2c1.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
