--- a/index.html
+++ b/index.html
@@ -41,6 +41,44 @@
         </div>
         </div>
     </section>
+    <section id="pricing">
+        <div>
+           <div>
+            <h3>TENOR TROMBONE</h3>
+            <h4>$600</h4>
+            <p>Lorem</p>
+            <p>Lorem</p>
+            <p>Lorem</p>
+            <button>Select</button>
+           </div>
+           <div>
+            <h3>BASS TROMBONE</h3>
+            <h4>$900</h4>
+            <p>Lorem</p>
+            <p>Lorem</p>
+            <p>Lorem</p>
+            <button>Select</button>
+           </div>
+           <div>
+            <h3>VALVE TROMBONE</h3>
+            <h4>$1200</h4>
+            <p>Lorem</p>
+            <p>Lorem</p>
+            <p>Lorem</p>
+            <button>Select</button>
+           </div>
+        </div>
+
+    </section>
+   <footer>
+    <div>
+        <a href="#">Privecy</a>
+        <a href="#">Terms</a>
+        <a href="#">Contact</a>
+        <p>Copyright 2016, Original Trombones</p>
+    </div>
+
+   </footer>
     <script src="https://kit.fontawesome.com/ca6fc0d2c1.js" crossorigin="anonymous"></script>
 </body>
 </html>
