--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Betsegaw-Baheer/style.css">
 </head>
 
 <body>
@@ -26,59 +26,88 @@
     <section id="features">
         <div id="description">
             <div class="feature">
-             <i class="fa-solid fa-recycle"></i> 
-             <h2>Premium Materials</h2>
-             <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
-            
-            <i class="fa-solid fa-truck"></i>
-            <h2>Fast Shipping</h2>
-            <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
-    
-            <i class="fa-sharp fa-solid fa-battery-full"></i>
-            </i><h2>Quality Assurance</h2>
-            <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+                <div class="feature-item">
+                    <div class="icon">
+                        <i class="fa-solid fa-recycle"></i>
+                    </div>
+                    <div>
+                        <h2>Premium Materials</h2>
+                        <p>Our trombones use the shiniest brass which is sourced locally. This will increase the
+                            longevity
+                            of your purchase.</p>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="icon">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <div>
+                        <h2>Fast Shipping</h2>
+                        <p>We make sure you recieve your trombone as soon as we have finished making it. We also
+                            provide<br>
+                            free returns if you are not satisfied.</p>
+                    </div>
+
+
+                </div>
+
+                <div class="feature-item">
+                    <div class="icon">
+                        <i class="fa-sharp fa-solid fa-battery-full"></i>
+                    </div>
+
+                    <div>
+                        <h2>Quality Assurance</h2>
+                        <p>For every purchase you make, we will ensure there are no damages or faults and we will check
+                            and
+                            test the pitch of your instrument.</p>
+                    </div>
+
+                </div>
+
             </div>
         </div>
         </div>
     </section>
     <section id="pricing">
         <div>
-           <div>
-            <h3>TENOR TROMBONE</h3>
-            <h4>$600</h4>
-            <p>Lorem</p>
-            <p>Lorem</p>
-            <p>Lorem</p>
-            <button>Select</button>
-           </div>
-           <div>
-            <h3>BASS TROMBONE</h3>
-            <h4>$900</h4>
-            <p>Lorem</p>
-            <p>Lorem</p>
-            <p>Lorem</p>
-            <button>Select</button>
-           </div>
-           <div>
-            <h3>VALVE TROMBONE</h3>
-            <h4>$1200</h4>
-            <p>Lorem</p>
-            <p>Lorem</p>
-            <p>Lorem</p>
-            <button>Select</button>
-           </div>
+            <div>
+                <h3>TENOR TROMBONE</h3>
+                <h4>$600</h4>
+                <p>Lorem</p>
+                <p>Lorem</p>
+                <p>Lorem</p>
+                <button>Select</button>
+            </div>
+            <div>
+                <h3>BASS TROMBONE</h3>
+                <h4>$900</h4>
+                <p>Lorem</p>
+                <p>Lorem</p>
+                <p>Lorem</p>
+                <button>Select</button>
+            </div>
+            <div>
+                <h3>VALVE TROMBONE</h3>
+                <h4>$1200</h4>
+                <p>Lorem</p>
+                <p>Lorem</p>
+                <p>Lorem</p>
+                <button>Select</button>
+            </div>
         </div>
 
     </section>
-   <footer>
-    <div>
-        <a href="#">Privecy</a>
-        <a href="#">Terms</a>
-        <a href="#">Contact</a>
-        <p>Copyright 2016, Original Trombones</p>
-    </div>
+    <footer>
+        <div>
+            <a href="#">Privecy</a>
+            <a href="#">Terms</a>
+            <a href="#">Contact</a>
+            <p>Copyright 2016, Original Trombones</p>
+        </div>
 
-   </footer>
+    </footer>
     <script src="https://kit.fontawesome.com/ca6fc0d2c1.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
