--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Landing Page</title>
-    <link rel="stylesheet" href="/Betsegaw-Baheer/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -70,42 +70,46 @@
         </div>
     </section>
     <section id="pricing">
-        <div>
-            <div>
-                <h3>TENOR TROMBONE</h3>
-                <h4>$600</h4>
-                <p>Lorem</p>
-                <p>Lorem</p>
-                <p>Lorem</p>
-                <button>Select</button>
-            </div>
-            <div>
-                <h3>BASS TROMBONE</h3>
-                <h4>$900</h4>
-                <p>Lorem</p>
-                <p>Lorem</p>
-                <p>Lorem</p>
-                <button>Select</button>
-            </div>
-            <div>
-                <h3>VALVE TROMBONE</h3>
-                <h4>$1200</h4>
-                <p>Lorem</p>
-                <p>Lorem</p>
-                <p>Lorem</p>
-                <button>Select</button>
-            </div>
-        </div>
-
-    </section>
+        <div class="product" id="tenor">
+          <div class="level">Tenor Trombone</div>
+          <h2>$600</h2>
+          <ol>
+            <li>lorem ipsum</li>
+            <li>lorem ipsum</li>
+            <li>lorem ipsum</li>
+          </ol>
+          <button class="btn">Select</button>
+        </div> 
+        <div class="product" id="bass">
+            <div class="level">Bass Trombone</div>
+            <h2>$900</h2>
+            <ol>
+              <li>lorem ipsum</li>
+              <li>lorem ipsum</li>
+              <li>lorem ipsum</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div> 
+          <div class="product" id="valve">
+            <div class="level">Valve Trombone</div>
+            <h2>$1200</h2>
+            <ol>
+              <li>lorem ipsum</li>
+              <li>lorem ipsum</li>
+              <li>lorem ipsum</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div> 
+      </section>
     <footer>
         <div>
-            <a href="#">Privecy</a>
-            <a href="#">Terms</a>
-            <a href="#">Contact</a>
+            <ul>
+                <li><a href="#">Privecy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
             <p>Copyright 2016, Original Trombones</p>
         </div>
-
     </footer>
     <script src="https://kit.fontawesome.com/ca6fc0d2c1.js" crossorigin="anonymous"></script>
 </body>
