--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Betsegaw-Baheer/style.css">
 </head>
 
 <body>
@@ -101,15 +101,19 @@
             <button class="btn">Select</button>
           </div> 
       </section>
+ 
     <footer>
-        <div>
-            <ul>
-                <li><a href="#">Privecy</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-            <p>Copyright 2016, Original Trombones</p>
-        </div>
+        
+            <div class="navbar">
+                <ul>
+                    <li><a href="Privacy">Privacy</a></li>
+                    <li><a href="Term"> Terms</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+               <span>Copyright 2016, Original Trombones</span>
+
+            </div>
+      
     </footer>
     <script src="https://kit.fontawesome.com/ca6fc0d2c1.js" crossorigin="anonymous"></script>
 </body>
